    - Added way to reset the current level's checkpoint by setting a RAM address.

v0.1.7:
    - Changed the default SA-1 freeram address to avoid conflicts with lx5's DSS.
    - Fixed room checkpoints not working anymore.
    - Fixed rare start+select conflict with other patches.

v0.1.8:
    - Added identifier string in ROM with version number.
    - Renamed !freeram to !retry_freeram to avoid naming conflicts.
    - Split "gm14_end.asm" routines into multiple files inside the "code/hijacks/gm14_end" folder for more modularity.
    - Changed !reset_rng define to a per-sublevel table to be able to have a different setting in each level (thanks Abdu for the suggestion).
    - Fixed softlock when getting a checkpoint in the bonus game.
    - Optimized Retry RAM reset in "load_title.asm".
    - Fixed inconsistency with sprites movement with pipe entrances when respawning in a level (thanks LouisDoucet for reporting this).
    - Merged checkpoint and effect tables into a single checkpoint_effect table, where each digit corresponds to a value in the original tables. Besides keeping the most important sublevel options in a single place, it also saves 512 bytes of space.

v0.1.9:
    - Fixed issue where calling $00F606 in consecutive frames would trigger the death song even if disabled (thanks SuperMargot for reporting this).
    - Fixed issue where dying in a level with a "No Yoshi" entrance would respawn you in the wrong sublevel (thanks Abdu for reporting this).
    - Implemented death counter display.
    - Fixed Retry RAM reset loop only resetting the first byte (thanks BabaYegha and FYRE150 for reporting an odd issue caused by this).
    - Optimized the Retry RAM reset code even more.
    - Put Retry RAM reset code in gamemode 8 too. This fixes an issue where if people prevent the erase file menu to reload the title screen after erasing a file, the new save file would use the addresses saved to SRAM before the file was erased.