@@ -99,7 +99,7 @@
 
 ; X/Y position of the first tile in the prompt (the cursor on the first line).
 ; You should only change this if you're removing the black box.
-; TODO: add RAM for these too.
+; Note that you can also change these on the fly (see "docs/ram_map.txt").
 !text_x_pos = $58
 !text_y_pos = $6F
 
