@@ -72,14 +72,14 @@ Now for the actual RAM addresses (names are prefixed with "!ram_" in ram.asm, an
 ;=============================================================================================;
 ; prompt_override ;   $0F   ;  $01  ; Can be used to override the Retry settings of the cur-  ;
 ;                 ;         ;       ; rent level. It follows the same format as the "effect"  ;
-;                 ;         ;       ; table in tables.asm. It's only reset on overworld load, ;
-;                 ;         ;       ; meaning that its effect will last for all sublevels in  ;
-;                 ;         ;       ; the level (unless you change it, of course).            ;
+;                 ;         ;       ; table in tables.asm. It's only reset on title screen    ;
+;                 ;         ;       ; load, meaning that its effect will last until you set it;
+;                 ;         ;       ; back to 0 yourself.                                     ;
 ;=============================================================================================;
 ; disable_exit    ;   $10   ;  $01  ; If set, the Retry prompt won't show the "exit" option.  ;
-;                 ;         ;       ; It's set to !disable_exit_option on title screen load,  ;
-;                 ;         ;       ; and also on overworld load. You can also change it at   ;
-;                 ;         ;       ; any time to remove the option in certain situations.    ;
+;                 ;         ;       ; It's set to !disable_exit_option on title screen load.  ;
+;                 ;         ;       ; You can also change it at any time to remove the option ;
+;                 ;         ;       ; in certain situations.                                  ;
 ;=============================================================================================;
 ; set_checkpoint  ;   $11   ;  $02  ; If the low byte is set to any value other than $FF,     ;
 ;                 ;         ;       ; it will trigger a checkpoint according to the checkpoint;
@@ -101,7 +101,15 @@ Now for the actual RAM addresses (names are prefixed with "!ram_" in ram.asm, an
 ;                 ;         ;       ; only if $9D was set before the transition (i.e., if a   ;
 ;                 ;         ;       ; pipe was entered, but not if a door was entered).       ;
 ;=============================================================================================;
-; reserved        ;   $14   ;  $0C  ; Unused, but reserved for future expansion.              ;
+; prompt_x_pos    ;   $14   ;  $01  ; Holds the X position at which the Retry prompt should   ;
+;                 ;         ;       ; appear at. You can write to it at any time. Note that   ;
+;                 ;         ;       ; this address is only reset on title screen load.        ;
+;=============================================================================================;
+; prompt_y_pos    ;   $15   ;  $01  ; Holds the Y position at which the Retry prompt should   ;
+;                 ;         ;       ; appear at. You can write to it at any time. Note that   ;
+;                 ;         ;       ; this address is only reset on title screen load.        ;
+;=============================================================================================;
+; reserved        ;   $16   ;  $0A  ; Unused, but reserved for future expansion.              ;
 ;                 ;         ;       ; Usage as free ram is not recommended.                   ;
 ;=============================================================================================;
 ; death_counter   ;   $20   ;  $05  ; Holds the amount of deaths occurred. Each byte holds the;
