@@ -51,3 +51,5 @@ v0.1.9:
     - Fixed Retry RAM reset loop only resetting the first byte (thanks BabaYegha and FYRE150 for reporting an odd issue caused by this).
     - Optimized the Retry RAM reset code even more.
     - Put Retry RAM reset code in gamemode 8 too. This fixes an issue where if people prevent the erase file menu to reload the title screen after erasing a file, the new save file would use the addresses saved to SRAM before the file was erased.
+    - Removed code that reset the !ram_prompt_override and !ram_disable_exit addresses on overworld load.
+    - Added !ram_prompt_x_pos and !ram_prompt_y_pos to change the prompt position at runtime.
